--- a/Project/nbproject/private/private.properties
+++ b/Project/nbproject/private/private.properties
@@ -1,6 +1,3 @@
 compile.on.save=true
-<<<<<<< HEAD
-user.properties.file=C:\\Users\\nattapon\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
-=======
-user.properties.file=C:\\Users\\yacth_Mon\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
->>>>>>> 46acdae9756f45c93f8253c4fd615342b72d58b0
+user.properties.file=C:\\Users\\GuideJunG\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+
